# pkg/note_v1/api.swagger.json
@@ -160,14 +160,12 @@
     "note_v1CreateRequest": {
       "type": "object",
       "properties": {
-        "title": {
-          "type": "string"
+        "id": {
+          "type": "string",
+          "format": "int64"
         },
-        "text": {
-          "type": "string"
-        },
-        "author": {
-          "type": "string"
+        "note": {
+          "$ref": "#/definitions/note_v1NoteInfo"
         }
       }
     },
@@ -206,14 +204,8 @@
           "type": "string",
           "format": "int64"
         },
-        "title": {
-          "type": "string"
-        },
-        "text": {
-          "type": "string"
-        },
-        "author": {
-          "type": "string"
+        "info": {
+          "$ref": "#/definitions/note_v1NoteInfo"
         },
         "created_at": {
           "type": "string",
@@ -228,13 +220,9 @@
         }
       }
     },
-    "note_v1UpdateRequest": {
+    "note_v1NoteInfo": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64"
-        },
         "title": {
           "type": "string"
         },
@@ -243,6 +231,32 @@
         },
         "author": {
           "type": "string"
+        }
+      }
+    },
+    "note_v1UpdateNoteInfo": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "text": {
+          "type": "string"
+        },
+        "author": {
+          "type": "string"
+        }
+      }
+    },
+    "note_v1UpdateRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "note": {
+          "$ref": "#/definitions/note_v1UpdateNoteInfo"
         }
       }
     },
